T13 - Implementar comandos e estados em tempo real
